# cite2fn

./: .gitignore  LICENSE  README.md  cite2footnote_v2_spec.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: cite2footnote.md
cite2fn/: assemble.py  cli.py  fetch.py  footnotes.py  supra.py
skills/cite2footnote/: SKILL.md
