[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cite2fn"
version = "0.1.0"
description = "Convert hyperlinked citations in Word documents to Bluebook-formatted footnotes or endnotes"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cite2fn*"]
